[project]
name = "laboratory"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "genchan_omega", email = "106954010+genchan-omega@users.noreply.github.com" }
]
dependencies = [
    "requests>=2.32.3",
    "beautifulsoup4>=4.12.3",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/laboratory"]
